feat: verify number